# ernest

./: .gitignore  98-ernest.rules  CMakeLists.txt  README.md  ernest.ini  install.sh  package.xml  setup.py
action/: SetJointPosition.action
launch/: ernest.launch
scripts/: body.py  brain.py  logic.py  mind.py  mouth.py  sensors.py  soul.py  teleop_nunchuck.py
src/ernest/: brain.py
src/ernest/logic/: statemachine.py  states.py
srv/: GetMood.srv  ServoAngle.srv  SetMood.srv  StringAndResult.srv
